# juice

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  activity.html  compose.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  readings.json
.claude/skills/commit/: SKILL.md
.github/workflows/: ci.yml
juice/: __init__.py  air_collector.py  auth.py  cli.py  collector.py  flipfix.py  overload.py  recorder.py  server.py  state.py  store.py
juice/web/: README.md  air.js  air.test.js  circuit.js  circuit.test.js  circuit_page.js  circuit_page.test.js  cost.js  cost.test.js  detail.js  detail.test.js  events.js  events.test.js  format.js  format.test.js  opbanner.js  opbanner.test.js  peaks.js  peaks.test.js  power.js  power.test.js  scroll.js  scroll.test.js  strip.js  strip.test.js  tiles.js  tiles.test.js  toast.js  toast.test.js  tooltip.js  tooltip.test.js  usage.js  usage.test.js
scripts/: backup-prod.sh  sync-prod-to-dev.sh
tests/: test_air_collector.py  test_auth.py  test_cli.py  test_collector.py  test_flipfix.py  test_inline_js.py  test_overload.py  test_power_controls_js.py  test_recorder.py  test_server.py  test_state.py  test_store.py  test_web_loader.py
tests/e2e/: __init__.py  characterize.py  playwright.config.js  seed.py  serve.py
tests/e2e/specs/: charts.spec.js  circuit.spec.js  deeplink.spec.js  helpers.js  nav.spec.js  power.spec.js  tooltip.spec.js
