[project]
name = "juice"
version = "0.1.0"
description = "Pinball machine power monitoring"
requires-python = ">=3.14"
dependencies = [
    "aiohttp",
    "click",
    "duckdb>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
juice = "juice.cli:cli"
