[project]
name = "juice"
version = "0.1.0"
description = "Pinball machine power monitoring"
requires-python = ">=3.14"
dependencies = [
    "aiohttp",
    "click",
    "duckdb>=1.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "matplotlib>=3.10.8",
    "mypy>=1.15",
    "pre-commit>=4.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]

[project.scripts]
juice = "juice.cli:cli"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "C4", "S", "T20"]
ignore = ["E501", "S101", "S311"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101", "S105", "S106", "S608", "B005"]
"juice/cli.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["juice"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disable_error_code = ["import-untyped", "import-not-found", "union-attr", "index", "return-value", "call-overload"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
